0.9.90
=======
- Don't lock screen on lid event when multiple monitor are connected.
- Force DPMSModeOff on lid close event if it is not done in Hardware.

0.8.3.1
=======
- Missing signal handler for power button settings (bug #5656).
- Allow 5% as a minimum critical charge instead of 10%.
- Change some property names, specially for buttons to avoid 
  problems with old 0.6 configuration.

0.8.3
=======
- Provides more standard org.fd.PowerManagement DBus methods and signal (bug #5569).
- Make it possible to compile without network manager support.
- Add never show icon to the system tray configuration (bug #5613).
- Fix a typo that prevents from getting the correct critical configuration (bug #5619).
- Use Gtk as a popup indicator to show the brightness level as the cairo seems to be 
  problematic on some hardware. (bug #5544 #5632).
- Better alignement in the interface file, worked by Josef Havran.