@@ -2,9 +2,9 @@ m4_define([intltool_minimum_version], [0.31])
 m4_define([xfpm_version_major],  [0])
 m4_define([xfpm_version_minor],  [9])
 m4_define([xfpm_version_micro],  [90])
-m4_define([xfpm_version_build],  [])
-m4_define([xfpm_version_tag],[])
-m4_define([xfpm_version], [xfpm_version_major().xfpm_version_minor().xfpm_version_micro()ifelse(xfpm_version_tag(), [svn], [xfpm_version_tag().xfpm_version_build()], [xfpm_version_tag()])])
+m4_define([xfpm_version_build],  [@REVISION@])
+m4_define([xfpm_version_tag],[git])
+m4_define([xfpm_version], [xfpm_version_major().xfpm_version_minor().xfpm_version_micro()ifelse(xfpm_version_tag(), [git], [xfpm_version_tag().xfpm_version_build()], [xfpm_version_tag()])])
 
 AC_INIT([xfce4-power-manager], [xfpm_version], [http://bugzilla.xfce.org/])
 AC_PREREQ(2.50)
