@@ -2,6 +2,7 @@
 =======
 - Don't lock screen on lid event when multiple monitor are connected.
 - Force DPMSModeOff on lid close event if it is not done in Hardware.
+- Fix a crash in set_client_id (bug #5673).
 
 0.8.3.1
 =======
